--- a/wwwroot/src/app/view/main/main.html
+++ b/wwwroot/src/app/view/main/main.html
@@ -1,1 +1,23 @@
-<h1>Hello World!</h1>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+					
+			<ul class="nav nav-tabs">
+				<li class="active"><a href="#lesson1" data-toggle="tab">Урок 1</a></li>
+				<li><a href="#lesson2" data-toggle="tab">Урок 2</a></li>
+			</ul>
+			
+			<div class="tab-content">
+				<div id="lesson1" class="tab-pane fade in active">
+					<h1 class="text-center">Урок 1</h1>
+					<p><svg id="chess_board" width="300" viewbox="0 0 100 100"></svg></p>
+				</div>
+				<div id="lesson2" class="tab-pane fade">
+					<h1 class="text-center">Урок 2</h1>
+					<p>Hello World!</p>
+				</div>
+			</div>
+
+		</div>
+	</div>
+</div>
